--- a/index.html
+++ b/index.html
@@ -1,26 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
-    <title>QA Annotator</title>
+    <meta charset="utf-8" />
+    <title>qa-annotator</title>
     <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="app.js"></script>
+    <script src="app.js"></script>
   </head>
   <body>
-    <h1>Treebank editor <span style="font-size:13px;">v0.1</span></h1>
+    <h1>qa-annotator<span class="f13">v0.1</span></h1>
     <div class="row">
-        <div class="column">
-            <h3>Paste your treebank XML here:</h3>
+      <div class="column">
+        <h3>Source jsonl</h3>
+        <div class="row">
+          <div class="column-20">
+            <label for="upload">↑ Upload</label
+            ><input type="file" id="upload" accept=".jsonl" />
+          </div>
+          <div class="column-80">
             <textarea id="origin"></textarea>
-        </div>
-        <div class="column">
-            <h3>The modified XML will appear here:</h3>
-            <textarea id="target"></textarea>
+          </div>
         </div>
       </div>
-    <main id="main">
-        <h3>Editable tokens:</h3>
-        <div id="tokens">No tokens yet.</div>
-    </main>
+      <div class="column">
+        <h3>Annotated jsonl</h3>
+        <div class="row">
+          <div class="column-20">
+            <span class="button" id="download">↓ Download</span>
+          </div>
+          <div class="column-80">
+            <textarea id="target"></textarea>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <h3>Annotate</h3>
+      <div id="annotator"></div>
+    </div>
   </body>
 </html>
